# browserd

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.hermes/plans/: 20260510-llm-provider-layer.md
browserd/: __init__.py  cli.py  client.py  daemon.py  db.py  models.py  portpool.py  profile_manager.py  providers.py  tasks.py
docs/plans/: 2026-05-10-browser-profiles.md
